Fix weird selection flash on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -82,11 +82,20 @@ p {
 }
 
 button {
-  user-select: none;
-  cursor: pointer;
-
+  touch-action: manipulation;
+  
   border-radius: 10px;
   border: none;
+
+  /* Weird selection flashes on mobile without this */
+  @media (hover: hover) {
+    cursor: pointer;
+  }
+  
+  /* Double check it */
+  user-select: none;
+  -webkit-tap-highlight-color: transparent; 
+  -webkit-user-select: none; 
 }
 
 button[disabled] {
